--- a/html/summon.html
+++ b/html/summon.html
@@ -46,7 +46,7 @@
                        src="../asset/lottie/loading-morandi-50.json"></lottie-player>
 
         <nav class="navbar-expand-custom navbar-mainbg" id="navbar">
-            <a class="navbar-brand navbar-logo" href="#">Cyte</a>
+            <a class="navbar-brand navbar-logo" href="#"><img src="../asset/img/Asset 52.png" alt="game logo" style="max-width: 100px; max-height: 150px;"></a>
             <button aria-controls="navbar-content"
                     aria-expanded="false"
                     aria-label="toggle navigation"
@@ -89,53 +89,58 @@
             </div>
         </section>
 
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="../asset/img/7a5e72e46eef38079c9a0494d34b41bb.jpg" alt="First slide">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>HELLO</h5>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum vitae explicabo aliquid officia libero dignissimos perferendis! Sint qui sunt earum iste nihil modi maiores voluptatibus ducimus dolor. Illum, nemo!</p>
-                    <!-- <div class="summon-btns">
-                        <div class="left btn-summon-ctn" id="btn-summon-one">
-                            <span><a class="left" href="#"></a></span>
-                        </div>
-                        <div class="right btn-summon-ctn" id="btn-summon-multi">
-                            <span><a class="right" href="#"></a></span>
-                        </div>
-                    </div> -->
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="..." alt="Second slide">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>...</h5>
-                    <p>...</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="..." alt="Third slide">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>...</h5>
-                    <p>...</p>
-                </div>
+        <div class="img-slider">
+            <div class="slide active">
+              <img src="../asset/img/7a5e72e46eef38079c9a0494d34b41bb.jpg" alt="">
+              <div class="info">
+                <h2>Slide 01</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+            <div class="slide">
+              <img src="2.jpg" alt="">
+              <div class="info">
+                <h2>Slide 02</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="3.jpg" alt="">
+              <div class="info">
+                <h2>Slide 03</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="4.jpg" alt="">
+              <div class="info">
+                <h2>Slide 04</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="5.jpg" alt="">
+              <div class="info">
+                <h2>Slide 05</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+            <div class="navigation">
+              <div class="btn active"></div>
+              <div class="btn"></div>
+              <div class="btn"></div>
+              <div class="btn"></div>
+              <div class="btn"></div>
+            </div>
           </div>
-        
+        <!-- <div class="summon-btns">
+            <div class="left btn-summon-ctn" id="btn-summon-one">
+                <span><a class="left" href="#"></a></span>
+            </div>
+            <div class="right btn-summon-ctn" id="btn-summon-multi">
+                <span><a class="right" href="#"></a></span>
+            </div>
+        </div> -->
         <!-- End Main -->
 
         <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
