--- a/html/statistics.html
+++ b/html/statistics.html
@@ -87,35 +87,38 @@
         <img alt="" id="background-image" src="https://images8.alphacoders.com/654/thumb-1920-654111.jpg">
 
         <!-- Main -->
-        <div class="profile-card">
-            <div class="infos">
-                <div class="img-border">
-                    <img alt="" id="character-image" src="">
-                </div>
-                <h1 class="name" id="character-name"></h1>
-                <h3 class="specialty" id="character-species"></h3>
-                <a href="#" id="character-wiki" target="_">
-                    <button class="contact-me-btn">Wiki</button>
-                </a>
-            </div>
+        <!--        <div class="profile-card">-->
+        <!--            <div class="infos">-->
+        <!--                <div class="img-border">-->
+        <!--                    <img alt="" id="character-image" src="">-->
+        <!--                </div>-->
+        <!--                <h1 class="name" id="character-name"></h1>-->
+        <!--                <h3 class="specialty" id="character-species"></h3>-->
+        <!--                <a href="#" id="character-wiki" target="_">-->
+        <!--                    <button class="contact-me-btn">Wiki</button>-->
+        <!--                </a>-->
+        <!--            </div>-->
 
-            <div class="stats">
-                <div class="stat">
-                    <span class="stat-num" id="character-age">X</span>
-                    <span class="stat-name">AGE</span>
-                </div>
+        <!--            <div class="stats">-->
+        <!--                <div class="stat">-->
+        <!--                    <span class="stat-num" id="character-age">X</span>-->
+        <!--                    <span class="stat-name">AGE</span>-->
+        <!--                </div>-->
 
-                <div class="stat">
-                    <span class="stat-num" id="character-rating">X</span>
-                    <span class="stat-name">RATING</span>
-                </div>
+        <!--                <div class="stat">-->
+        <!--                    <span class="stat-num" id="character-rating">X</span>-->
+        <!--                    <span class="stat-name">RATING</span>-->
+        <!--                </div>-->
 
-                <div class="stat">
-                    <span class="stat-num" id="character-favourite">X</span>
-                    <span class="stat-name">FAVOURITE</span>
-                </div>
-            </div>
-        </div>
+        <!--                <div class="stat">-->
+        <!--                    <span class="stat-num" id="character-favourite">X</span>-->
+        <!--                    <span class="stat-name">FAVOURITE</span>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--        </div>-->
+
+        <canvas height="400" id="character-chart" width="400"></canvas>
+
         <!-- End Main -->
 
         <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
@@ -132,14 +135,17 @@
                 integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
                 src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-        <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+        <script defer src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
         <script defer src="../js/lottie/loading.js"></script>
         <script defer src="../js/util/util.js"></script>
         <script defer src="../js/util/proxy.js"></script>
         <script defer src="../js/repo/account.js"></script>
         <script defer src="../js/repo/user.js"></script>
         <script defer src="../js/repo/aot/character.js"></script>
+        <script defer src="../js/repo/transaction.js"></script>
         <script defer src="../js/util/navbar.js"></script>
+        <script defer src="../js/util/analyzer.js"></script>
         <script defer src="../js/statistics.js"></script>
     </body>
 </html>
